correction de toutes les erreurs en infra